...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dal_campus_temp"
    tools:context="ca.dal.cs.softeng.LoginActivity">

    <EditText
        android:id="@+id/email_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_user"
        android:textColorHint="@color/textHint"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <EditText
        android:id="@+id/password_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/textHint"
...
